<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nowplaying"
            android:icon="@drawable/now_playing"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/coming_soon"
            android:title="@string/upcoming" />

        <item
            android:id="@+id/nav_populer"
            android:icon="@drawable/populer"
            android:title="@string/populer" />
        <item
            android:id="@+id/nav_top_rated"
            android:icon="@drawable/top_rated"
            android:title="@string/top_rated"/>
    </group>



</menu>
