<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/film_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/film_title"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/film_title"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                 />

            <TextView
                android:id="@+id/film_release"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/release_date"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/film_release"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                 />

            <TextView
                android:id="@+id/film_userrating"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/release"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/rating"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/userrating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/film_userrating"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
               />

            <TextView
                android:id="@+id/film_sysnopsis"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/userrating"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/overview"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/sysnopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/film_sysnopsis"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>